Intro text: Decoupled

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -114,6 +114,14 @@ title: Refills
       <div class="refill-snippet"><%= code_for('icon_bullet_points') %></div>
     </section>
 
+    <section id="intro_text" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Intro Text</h6></div>
+        <%= partial "intro_text" %>
+      </div>
+      <div class="refill-snippet"><%= code_for('intro_text') %></div>
+    </section>
+
   </div> 
 </div>
 
