--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -122,6 +122,14 @@ title: Refills
       <div class="refill-snippet"><%= code_for('intro_text') %></div>
     </section>
 
+    <section id="maps" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Maps</h6></div>
+        <%= partial "maps" %>
+      </div>
+      <div class="refill-snippet"><%= code_for('maps') %></div>
+    </section>
+
   </div> 
 </div>
 
