--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -25,7 +25,7 @@
 @import "refills/hero";
 @import "refills/icon-bullet-points";
 @import "refills/intro-text";
-// @import "refills/maps";
+@import "refills/maps";
 // @import "refills/navigation";
 // @import "refills/side-image";
 // @import "refills/tables";
