--- a/source/stylesheets/refills/_maps.scss
+++ b/source/stylesheets/refills/_maps.scss
@@ -8,23 +8,21 @@
 }
 
 #map_canvas .content {
-  padding: .7em .5em 1em .5em;
+  padding: 0 .5em 1em .5em;
 }
 
 #map_canvas .firstHeading {
-  font-family: $serif;
   font-size: 1.4em;
   margin-bottom: .4em;
 }
 
 #map_canvas .bodyContent p {
-  font-family: $sans-serif;
   font-size: 1em;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 #map_canvas .bodyContent p:last-of-type {
   border-top: 1px solid silver;
-  margin-top: .5em;
+  margin: 0 0 .5em 0;
   padding-top: .3em;
 }
