Add back code for intermediate review

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -130,6 +130,60 @@ title: Refills
       <div class="refill-snippet"><%= code_for('maps') %></div>
     </section>
 
+    <section id="navigation" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Navigation</h6></div>
+        <%= partial "navigation" %>
+      </div>
+      <div class="refill-snippet"><%= code_for('navigation') %></div>
+    </section>
+
+    <section id="scroll-on-page" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Scroll On Page</h6></div>
+        <div class="refill-centering">
+          <div class="refill-smaller"><%= partial "scroll_on_page" %></div>
+        </div>
+      </div>
+      <div class="refill-snippet"><%= code_for('scroll_on_page') %></div>
+    </section>
+
+    <section id="search-tools" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Search Tools</h6></div>
+        <%= partial "search_tools" %>
+      </div>
+      <div class="refill-snippet"><%= code_for('search_tools') %></div>
+    </section>
+
+    <section id="side-image" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Side Image</h6></div>
+        <%= partial "side_image" %>
+      </div>
+      <div class="refill-snippet"><%= code_for('side_image') %></div>
+    </section>
+
+    <section id="tables" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Tables</h6></div>
+        <%= partial "tables" %>
+      </div>
+      <div class="refill-snippet"><%= code_for('tables') %></div>
+      <div class="refills-wrapper">
+        <%= partial "tables_minimal" %>
+      </div>
+      <div class="refill-snippet"><%= code_for('tables_minimal') %></div>
+    </section>
+
+    <section id="vertical-tabs" class="refill">
+      <div class="refills-wrapper">
+        <div class="line-behind-text"><h6>Vertical Tabs</h6></div>
+        <%= partial "vertical_tabs" %>
+      </div>
+      <div class="refill-snippet"><%= code_for('vertical_tabs') %></div>
+    </section>
+
   </div> 
 </div>
 
