--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -26,41 +26,42 @@
 @import "refills/icon-bullet-points";
 @import "refills/intro-text";
 @import "refills/maps";
-// @import "refills/navigation";
-// @import "refills/side-image";
-// @import "refills/tables";
-// @import "refills/tables-minimal";
-// @import "refills/vertical-tabs";
-// @import "refills/video";
-// @import "refills/scroll-on-page";
 
-// @import "refills/accordion";
-// @import "refills/badges";
-// @import "refills/breadcrumbs";
-// @import "refills/button-group";
-// @import "refills/dropdown";
-// @import "refills/expander";
-// @import "refills/fade-in";
-// @import "refills/flashes";
-// @import "refills/hover-tile-animation";
-// @import "refills/image-gradient-dynamic";
-// @import "refills/label-alerts";
-// @import "refills/modal";
-// @import "refills/pagination";
-// @import "refills/progress-bar";
-// @import "refills/progress-bar-indication";
-// @import "refills/search-bar";
-// @import "refills/search-tools";
-// @import "refills/sliding-menu";
-// @import "refills/switch";
-// @import "refills/texture-legend";
-// @import "refills/textures";
-// @import "refills/tooltip";
-// @import "refills/parallax";
+@import "refills/navigation";
+@import "refills/side-image";
+@import "refills/tables";
+@import "refills/tables-minimal";
+@import "refills/vertical-tabs";
+@import "refills/video";
+@import "refills/scroll-on-page";
 
-// @import "refills/type-system-geometric";
-// @import "refills/type-system-rounded";
-// @import "refills/type-system-sans";
-// @import "refills/type-system-serif";
-// @import "refills/type-system-slab";
-// @import "refills/type-system-traditional";
+@import "refills/accordion";
+@import "refills/badges";
+@import "refills/breadcrumbs";
+@import "refills/button-group";
+@import "refills/dropdown";
+@import "refills/expander";
+@import "refills/fade-in";
+@import "refills/flashes";
+@import "refills/hover-tile-animation";
+@import "refills/image-gradient-dynamic";
+@import "refills/label-alerts";
+@import "refills/modal";
+@import "refills/pagination";
+@import "refills/progress-bar";
+@import "refills/progress-bar-indication";
+@import "refills/search-bar";
+@import "refills/search-tools";
+@import "refills/sliding-menu";
+@import "refills/switch";
+@import "refills/texture-legend";
+@import "refills/textures";
+@import "refills/tooltip";
+@import "refills/parallax";
+
+@import "refills/type-system-geometric";
+@import "refills/type-system-rounded";
+@import "refills/type-system-sans";
+@import "refills/type-system-serif";
+@import "refills/type-system-slab";
+@import "refills/type-system-traditional";
