--- a/source/stylesheets/base/_base.scss
+++ b/source/stylesheets/base/_base.scss
@@ -5,21 +5,21 @@
 
 
   // Variables
-  // @import "variables";
+  @import "variables";
 
   // Neat Settings -- uncomment if using Neat -- must be imported before Neat
-  // @import "grid-settings";
+  @import "grid-settings";
 
   // Extends
-  // @import "extends/button";
-  // @import "extends/clearfix";
-  // @import "extends/errors";
-  // @import "extends/flashes";
-  // @import "extends/hide-text";
+  @import "extends/button";
+  @import "extends/clearfix";
+  @import "extends/errors";
+  @import "extends/flashes";
+  @import "extends/hide-text";
 
   // // Typography and Elements
-  // @import "typography";
-  // @import "forms";
-  // @import "tables";
-  // @import "lists";
-  // @import "buttons";
+  @import "typography";
+  @import "forms";
+  @import "tables";
+  @import "lists";
+  @import "buttons";
