--- a/source/stylesheets/refills/_device.scss
+++ b/source/stylesheets/refills/_device.scss
@@ -6,32 +6,7 @@
   -webkit-font-smoothing: antialiased;
 
   button {
-    @include appearance(none);
     -webkit-font-smoothing: antialiased;
-    background-color: $base-accent-color;
-    border-radius: $base-border-radius;
-    color: white;
-    display: inline-block;
-    font-size: 1em;
-    font-weight: bold;
-    line-height: 1;
-    padding: 0.75em 1em;
-    text-decoration: none;
-    border: none;
-    cursor: pointer;
-    user-select: none;
-    vertical-align: middle;
-    white-space: nowrap;
-
-    &:hover {
-      background-color: darken($base-accent-color, 15);
-      color: white;
-    }
-
-    &:disabled {
-      cursor: not-allowed;
-      opacity: 0.5;
-    }
   }
 
   p {
@@ -83,6 +58,11 @@
 
     p {
       margin-bottom: 1.5em;
+    }
+
+    button {
+      @include button(flat, $base-accent-color);
+      padding: .7em 1em;
     }
   }
 
