--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -28,7 +28,7 @@
 @import "refills/maps";
 
 @import "refills/navigation";
-// @import "refills/scroll-on-page";
+@import "refills/scroll-on-page";
 // @import "refills/side-image";
 // @import "refills/tables";
 // @import "refills/tables-minimal";
