--- a/source/stylesheets/refills/_scroll-on-page.scss
+++ b/source/stylesheets/refills/_scroll-on-page.scss
@@ -1,31 +1,55 @@
-.scroll-on-page aside {
-  @include media($large-screen) {
-    @include span-columns(4);
-  }
-}
+.scroll-on-page {
+  // if you are using Bitters you can remove everything down to the commented line
+  $base-line-height: 1.5em;
+  $base-spacing: 1.5em;
+  $base-accent-color: #477DCA;
+  $base-link-color: $base-accent-color;
+  $dark-gray: #333;
+  $large-screen: em(860);
+  $base-font-color: $dark-gray;
+  -webkit-font-smoothing: antialiased;
 
-.scroll-on-page-link {
-  border-bottom: 1px solid transparentize($base-link-color, .8);
-  padding: $base-spacing / 2 0;
-  margin-right: $base-spacing;
-  display: block;
-
-  &:last-child {
-    margin-bottom: $base-spacing;
-  }
-}
-
-.scroll-on-page article {
-  h4 {
-    margin-bottom: .5em; 
+  p {
+    color: $base-font-color;
+    line-height: $base-line-height;
   }
 
-  section p:last-of-type {
-    margin-bottom: 2em; 
+  a {
+    text-decoration: none;
+    color: $base-link-color;
   }
 
-  @include media($large-screen) {
-    @include span-columns(8);
+  //////////////////////////////////////////////
+
+  aside {
+    @include media($large-screen) {
+      @include span-columns(4);
+    }
+  }
+
+  .scroll-on-page-link {
+    border-bottom: 1px solid transparentize($base-link-color, .8);
+    padding: $base-spacing / 2 0;
+    margin-right: $base-spacing;
+    display: block;
+
+    &:last-child {
+      margin-bottom: $base-spacing;
+    }
+  }
+
+  article {
+    h4 {
+      margin-bottom: .5em; 
+    }
+
+    section p:last-of-type {
+      margin-bottom: 2em; 
+    }
+
+    @include media($large-screen) {
+      @include span-columns(8);
+    }
   }
 }
 
