Side image: Decoupled

--- a/source/_side_image.html.erb
+++ b/source/_side_image.html.erb
@@ -1,10 +1,10 @@
 <div class="side-image">
   <div class="images-wrapper"></div>
-    <div class="content">
-    <h4>Topic Name</h4>
-    <h1>Message with a gradient image</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam assumenda nihil suscipit obcaecati sit, cum quod corporis adipisci ipsam, fugiat, quae error. Eaque commodi, dicta quidem explicabo mollitia inventore quibusdam.
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam assumenda nihil suscipit obcaecati sit, cum quod corporis adipisci ipsam, fugiat, quae error. Eaque commodi, dicta quidem explicabo mollitia inventore quibusdam.</p>
-    <button>Read more</button>
+    <div class="side-image-content">
+      <h4>Topic Name</h4>
+      <h1>Message with a gradient image</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam assumenda nihil suscipit obcaecati sit, cum quod corporis adipisci ipsam, fugiat, quae error. Eaque commodi, dicta quidem explicabo mollitia inventore quibusdam.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam assumenda nihil suscipit obcaecati sit, cum quod corporis adipisci ipsam, fugiat, quae error. Eaque commodi, dicta quidem explicabo mollitia inventore quibusdam.</p>
+      <button>Read more</button>
   </div>
 </div>
