--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -29,7 +29,7 @@
 
 @import "refills/navigation";
 @import "refills/scroll-on-page";
-// @import "refills/side-image";
+@import "refills/side-image";
 // @import "refills/tables";
 // @import "refills/tables-minimal";
 // @import "refills/vertical-tabs";
