Search tools: Decoupled

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -29,6 +29,7 @@
 
 @import "refills/navigation";
 @import "refills/scroll-on-page";
+@import "refills/search-tools";
 @import "refills/side-image";
 // @import "refills/tables";
 // @import "refills/tables-minimal";
@@ -52,7 +53,6 @@
 // @import "refills/progress-bar";
 // @import "refills/progress-bar-indication";
 // @import "refills/search-bar";
-// @import "refills/search-tools";
 // @import "refills/sliding-menu";
 // @import "refills/switch";
 // @import "refills/texture-legend";
