--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -31,7 +31,7 @@
 @import "refills/scroll-on-page";
 @import "refills/search-tools";
 @import "refills/side-image";
-// @import "refills/tables";
+@import "refills/tables";
 // @import "refills/tables-minimal";
 // @import "refills/vertical-tabs";
 // @import "refills/video";
