Table Minimal: Decoupled

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -32,7 +32,7 @@
 @import "refills/search-tools";
 @import "refills/side-image";
 @import "refills/tables";
-// @import "refills/tables-minimal";
+@import "refills/tables-minimal";
 // @import "refills/vertical-tabs";
 // @import "refills/video";
 
