Vertical Tabs: Decoupled

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -26,15 +26,13 @@
 @import "refills/icon-bullet-points";
 @import "refills/intro-text";
 @import "refills/maps";
-
 @import "refills/navigation";
 @import "refills/scroll-on-page";
 @import "refills/search-tools";
 @import "refills/side-image";
 @import "refills/tables";
 @import "refills/tables-minimal";
-// @import "refills/vertical-tabs";
-// @import "refills/video";
+@import "refills/vertical-tabs";
 
 // @import "refills/accordion";
 // @import "refills/badges";
@@ -58,6 +56,7 @@
 // @import "refills/texture-legend";
 // @import "refills/textures";
 // @import "refills/tooltip";
+// @import "refills/video";
 
 // @import "refills/type-system-geometric";
 // @import "refills/type-system-rounded";
