--- a/source/stylesheets/refills/_vertical-tabs.scss
+++ b/source/stylesheets/refills/_vertical-tabs.scss
@@ -1,4 +1,32 @@
-.vertical-tabs-container { // small screens: accordion
+.vertical-tabs-container {
+  // if you are using Bitters you can remove everything down to the commented line
+  $base-border-color: gainsboro;
+  $base-border-radius: 3px;
+  $base-line-height: 1.5em;
+  $base-spacing: 1.5em;
+  $base-accent-color: #477DCA;
+  $base-link-color: $base-accent-color;
+  $dark-gray: #333;
+  $medium-screen: em(640);
+  $base-font-color: $dark-gray;
+  -webkit-font-smoothing: antialiased;
+
+  li {
+    list-style: none;
+  }
+
+  p {
+    color: $base-font-color;
+    line-height: $base-line-height;
+  }
+
+  a {
+    text-decoration: none;
+    color: $base-link-color;
+  }
+
+  //////////////////////////////////////////////
+
   $tab-border-color: $base-border-color;
   $tab-border: 1px solid $tab-border-color;
   $tab-border-radius: $base-border-radius;
