--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -34,7 +34,7 @@
 @import "refills/tables-minimal";
 @import "refills/vertical-tabs";
 
-// @import "refills/accordion";
+@import "refills/accordion";
 // @import "refills/badges";
 // @import "refills/breadcrumbs";
 // @import "refills/button-group";
