--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -35,7 +35,7 @@
 @import "refills/vertical-tabs";
 
 @import "refills/accordion";
-// @import "refills/badges";
+@import "refills/badges";
 // @import "refills/breadcrumbs";
 // @import "refills/button-group";
 // @import "refills/dropdown";
