--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -36,7 +36,7 @@
 
 @import "refills/accordion";
 @import "refills/badges";
-// @import "refills/breadcrumbs";
+@import "refills/breadcrumbs";
 // @import "refills/button-group";
 // @import "refills/dropdown";
 // @import "refills/expander";
