Button group: Decoupled

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -37,7 +37,7 @@
 @import "refills/accordion";
 @import "refills/badges";
 @import "refills/breadcrumbs";
-// @import "refills/button-group";
+@import "refills/button-group";
 // @import "refills/dropdown";
 // @import "refills/expander";
 // @import "refills/fade-in";
