--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -38,7 +38,7 @@
 @import "refills/badges";
 @import "refills/breadcrumbs";
 @import "refills/button-group";
-// @import "refills/dropdown";
+@import "refills/dropdown";
 // @import "refills/expander";
 // @import "refills/fade-in";
 // @import "refills/flashes";
