--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -39,7 +39,7 @@
 @import "refills/breadcrumbs";
 @import "refills/button-group";
 @import "refills/dropdown";
-// @import "refills/expander";
+@import "refills/expander";
 // @import "refills/fade-in";
 // @import "refills/flashes";
 // @import "refills/hover-tile-animation";
