Fade in: Decoupled

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -40,7 +40,7 @@
 @import "refills/button-group";
 @import "refills/dropdown";
 @import "refills/expander";
-// @import "refills/fade-in";
+@import "refills/fade-in";
 // @import "refills/flashes";
 // @import "refills/hover-tile-animation";
 // @import "refills/image-gradient-dynamic";
