--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -41,7 +41,7 @@
 @import "refills/dropdown";
 @import "refills/expander";
 @import "refills/fade-in";
-// @import "refills/flashes";
+@import "refills/flashes";
 // @import "refills/hover-tile-animation";
 // @import "refills/image-gradient-dynamic";
 // @import "refills/label-alerts";
