--- a/source/stylesheets/refills/_flashes.scss
+++ b/source/stylesheets/refills/_flashes.scss
@@ -1,4 +1,14 @@
+// if you are using Bitters you can remove everything down to the commented line
+$alert-color: #FFF6BF !default;
+$error-color: #FBE3E4 !default;
+$success-color: #E6EFC2 !default;
+$notice-color: #E5EDF8 !default;
+$base-spacing: 1.5em !default;
+
+//////////////////////////////////////////////
+
 @mixin flash($color) {
+
   display: block;
   font-weight: bold;
   margin-bottom: $base-spacing / 2;
@@ -8,6 +18,7 @@
 
   a {
     color: darken($color, 70);
+    text-decoration: none;
     border-bottom: 1px solid transparentize(darken($color, 70), .7);
 
     &:hover {
