--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -42,7 +42,7 @@
 @import "refills/expander";
 @import "refills/fade-in";
 @import "refills/flashes";
-// @import "refills/hover-tile-animation";
+@import "refills/hover-tile-animation";
 // @import "refills/image-gradient-dynamic";
 // @import "refills/label-alerts";
 // @import "refills/modal";
