--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -43,7 +43,7 @@
 @import "refills/fade-in";
 @import "refills/flashes";
 @import "refills/hover-tile-animation";
-// @import "refills/image-gradient-dynamic";
+@import "refills/image-gradient-dynamic";
 // @import "refills/label-alerts";
 // @import "refills/modal";
 // @import "refills/pagination";
