Label alert: Decoupled

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -44,7 +44,7 @@
 @import "refills/flashes";
 @import "refills/hover-tile-animation";
 @import "refills/image-gradient-dynamic";
-// @import "refills/label-alerts";
+@import "refills/label-alerts";
 // @import "refills/modal";
 // @import "refills/pagination";
 // @import "refills/parallax";
